{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 598,
  "lineage": "2a74e023-1800-ac4f-b62d-1ee60a3fdf9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:573243418801:instance/i-0881207af1fb94de9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0881207af1fb94de9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair-obl",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09d3e265879de0848",
            "private_dns": "ip-172-16-10-76.ec2.internal",
            "private_ip": "172.16.10.76",
            "public_dns": "ec2-34-201-42-53.compute-1.amazonaws.com",
            "public_ip": "34.201.42.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce51261292935bf3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cec6ce29c33ce78",
            "tags": {
              "Name": "WebServer1"
            },
            "tags_all": {
              "Name": "WebServer1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006deb6c56592793b",
              "sg-0d40499044a36f626"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-ssh-obligatorio",
            "aws_subnet.subnet_public1",
            "aws_vpc.vpc_obligatorio",
            "aws_security_group.sg-http-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:573243418801:instance/i-0d86d0da3351741d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d86d0da3351741d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair-obl",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a60e144b3b2e5c7",
            "private_dns": "ip-172-16-20-53.ec2.internal",
            "private_ip": "172.16.20.53",
            "public_dns": "ec2-18-208-137-87.compute-1.amazonaws.com",
            "public_ip": "18.208.137.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d92f17cfd0ea4b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001277db3a615a1fe",
            "tags": {
              "Name": "WebServer2"
            },
            "tags_all": {
              "Name": "WebServer2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006deb6c56592793b",
              "sg-0d40499044a36f626"
            ]
          },
          "dependencies": [
            "aws_instance.webserver1",
            "aws_security_group.sg-http-obligatorio",
            "aws_security_group.sg-ssh-obligatorio",
            "aws_subnet.subnet_public1",
            "aws_subnet.subnet_public2",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:internet-gateway/igw-0e8c323ccb91020e7",
            "id": "igw-0e8c323ccb91020e7",
            "owner_id": "573243418801",
            "tags": {
              "Name": "ig_obligatorio"
            },
            "tags_all": {
              "Name": "ig_obligatorio"
            },
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "obligatorio_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:loadbalancer/app/obligatorioLoadBalancer/4f06938263cdff37",
            "arn_suffix": "app/obligatorioLoadBalancer/4f06938263cdff37",
            "dns_name": "obligatorioLoadBalancer-1955756522.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:573243418801:loadbalancer/app/obligatorioLoadBalancer/4f06938263cdff37",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "obligatorioLoadBalancer",
            "security_groups": [
              "sg-006deb6c56592793b",
              "sg-0d40499044a36f626"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001277db3a615a1fe"
              },
              {
                "subnet_id": "subnet-07cec6ce29c33ce78"
              }
            ],
            "subnets": [
              "subnet-001277db3a615a1fe",
              "subnet-07cec6ce29c33ce78"
            ],
            "tags": {
              "Name": "obligatorio_load_balancer"
            },
            "tags_all": {
              "Name": "obligatorio_load_balancer"
            },
            "vpc_id": "vpc-0cda973777b94e31d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-http-obligatorio",
            "aws_security_group.sg-ssh-obligatorio",
            "aws_subnet.subnet_public1",
            "aws_subnet.subnet_public2",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "balanceador_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:listener/app/obligatorioLoadBalancer/4f06938263cdff37/21088ff7816588b1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/38bc0e13d25481c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:573243418801:listener/app/obligatorioLoadBalancer/4f06938263cdff37/21088ff7816588b1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:loadbalancer/app/obligatorioLoadBalancer/4f06938263cdff37",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio",
            "aws_lb.obligatorio_load_balancer",
            "aws_lb_target_group.tg_obligatorio",
            "aws_security_group.sg-http-obligatorio",
            "aws_security_group.sg-ssh-obligatorio",
            "aws_subnet.subnet_public1",
            "aws_subnet.subnet_public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/38bc0e13d25481c3",
            "arn_suffix": "targetgroup/tgObligatorioV1/38bc0e13d25481c3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/38bc0e13d25481c3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tgObligatorioV1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/38bc0e13d25481c3-20210613193741156000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/38bc0e13d25481c3",
            "target_id": "i-0881207af1fb94de9"
          },
          "dependencies": [
            "aws_instance.webserver1",
            "aws_lb_target_group.tg_obligatorio",
            "aws_security_group.sg-http-obligatorio",
            "aws_security_group.sg-ssh-obligatorio",
            "aws_subnet.subnet_public1",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/38bc0e13d25481c3-20210613193842957300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:573243418801:targetgroup/tgObligatorioV1/38bc0e13d25481c3",
            "target_id": "i-0d86d0da3351741d9"
          },
          "dependencies": [
            "aws_security_group.sg-ssh-obligatorio",
            "aws_subnet.subnet_public1",
            "aws_subnet.subnet_public2",
            "aws_vpc.vpc_obligatorio",
            "aws_instance.webserver1",
            "aws_instance.webserver2",
            "aws_lb_target_group.tg_obligatorio",
            "aws_security_group.sg-http-obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:route-table/rtb-0b66e8f846327af2b",
            "id": "rtb-0b66e8f846327af2b",
            "owner_id": "573243418801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8c323ccb91020e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_obligatorio"
            },
            "tags_all": {
              "Name": "rt_obligatorio"
            },
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_obligatorio",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05587c07edbaa12c8",
            "route_table_id": "rtb-0b66e8f846327af2b",
            "subnet_id": "subnet-07cec6ce29c33ce78"
          },
          "dependencies": [
            "aws_internet_gateway.ig_obligatorio",
            "aws_route_table.rt_obligatorio",
            "aws_subnet.subnet_public1",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5ed661ded604389",
            "route_table_id": "rtb-0b66e8f846327af2b",
            "subnet_id": "subnet-001277db3a615a1fe"
          },
          "dependencies": [
            "aws_internet_gateway.ig_obligatorio",
            "aws_route_table.rt_obligatorio",
            "aws_subnet.subnet_public2",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-http-internal-obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:security-group/sg-0429fcc1b088a3b17",
            "description": "Permitir trafico http desde public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All out",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0429fcc1b088a3b17",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d40499044a36f626"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_http_internal",
            "name_prefix": "",
            "owner_id": "573243418801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permitir_http"
            },
            "tags_all": {
              "Name": "permitir_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-http-obligatorio",
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-http-obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:security-group/sg-0d40499044a36f626",
            "description": "Permitir trafico http entrante",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All out",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d40499044a36f626",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_http_obl",
            "name_prefix": "",
            "owner_id": "573243418801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permitir_http"
            },
            "tags_all": {
              "Name": "permitir_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ssh-obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:security-group/sg-006deb6c56592793b",
            "description": "Permitir trafico ssh entrante",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All out",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006deb6c56592793b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_ssh_obl",
            "name_prefix": "",
            "owner_id": "573243418801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permitir_ssh"
            },
            "tags_all": {
              "Name": "permitir_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_internal1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:subnet/subnet-0e57ecd441bba3f59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-0e57ecd441bba3f59",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573243418801",
            "tags": {
              "Name": "subnet_internal1"
            },
            "tags_all": {
              "Name": "subnet_internal1"
            },
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_internal2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:subnet/subnet-0c8029676e425a0ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-0c8029676e425a0ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573243418801",
            "tags": {
              "Name": "subnet_internal2"
            },
            "tags_all": {
              "Name": "subnet_internal2"
            },
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:subnet/subnet-07cec6ce29c33ce78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-07cec6ce29c33ce78",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573243418801",
            "tags": {
              "Name": "subnet_public1"
            },
            "tags_all": {
              "Name": "subnet_public1"
            },
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:subnet/subnet-001277db3a615a1fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.20.0/24",
            "id": "subnet-001277db3a615a1fe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "573243418801",
            "tags": {
              "Name": "subnet_public2"
            },
            "tags_all": {
              "Name": "subnet_public2"
            },
            "vpc_id": "vpc-0cda973777b94e31d"
          },
          "dependencies": [
            "aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573243418801:vpc/vpc-0cda973777b94e31d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0edaa0a0e2877bd87",
            "default_route_table_id": "rtb-0ab0b00bb213958c6",
            "default_security_group_id": "sg-0287e3ec4a122c205",
            "dhcp_options_id": "dopt-fc3e6786",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cda973777b94e31d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab0b00bb213958c6",
            "owner_id": "573243418801",
            "tags": {
              "Name": "vpc_obligatorio"
            },
            "tags_all": {
              "Name": "vpc_obligatorio"
            }
          }
        }
      ]
    }
  ]
}